# destiny-transcript-db

./: .dockerignore  .gitignore  Dockerfile  README.md  Whisperer.py  destiny-transcribe.go  docker-compose.yml  go.mod  go.sum  pyproject.toml  transcribe.sh
transcripts/: As0-RWAGeSo.csv  D_td3kUDtRI.csv  FxK_6YPnaEg.csv  GYIOTNB4bO8.csv  KdYKb9b1pNc.csv  XSiDSRLxe58.csv  ccAcP2XlK68.csv  k1lsPwMGRhM.csv  lsL88Xgv1fg.csv  original.csv  vPeG7O488v8.csv
